@@ -36,4 +36,4 @@ licenses := Seq("MIT" -> url("http://opensource.org/licenses/MIT"))
 credentials += Credentials(Path.userHome / ".ivy2" / ".sbtcredentials")
 
 fork in Test := true
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+CMSClassUnloadingEnabled")
